try to solve img issues

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="about-left">
                 <h2>Fintech is all about excellence in the world of business</h2>
-                <img src="/ressources/meeting-agreement.jpg" alt="people are doing a meeting in the board room">
+                <img src="meeting-agreement.jpg" alt="people are doing a meeting in the board room">
             </div>
             <div class="about-middle">
                 <h2>Who are we ?</h2>
@@ -127,7 +127,7 @@
         <div class="row">
             <div class="test">
                 <div class="image">
-                    <img src="/ressources/woman-portrait1.jpg" alt="portrait of a woman employee">
+                    <img src="woman-portrait1.jpg" alt="portrait of a woman employee">
                 </div>
                 <div class="test-content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quis nostrum dolorem, aliquam maxime fugit, minima at officia ducimus harum illo.</p>
@@ -144,7 +144,7 @@
 
             <div class="test">
                 <div class="image">
-                    <img src="/ressources/woman-portrait2.jpg" alt="portrait of a woman employee">
+                    <img src="woman-portrait2.jpg" alt="portrait of a woman employee">
                 </div>
                 <div class="test-content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quis nostrum dolorem, aliquam maxime fugit, minima at officia ducimus harum illo.</p>
